[package]
name = "raise-your-hand"
version = "0.1.0"
authors = ["Florence Epain <wabtey@disroot.org>",]
repository = "https://github.com/Fabinistere/raise-your-hand"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
# ----------- Common ----------
bevy = "0.12"
# bevy_tweening = "0.8"

# ----- Hitbox - Velocity -----
bevy_rapier2d = { version = "0.23", features = ["simd-stable", "debug-render-2d"] }

density-mesh-core = "1.5"
density-mesh-image = "1.5"
image = "0.23"

# ----- Utilities -----
serde = "1.0"
# ron = "0.7"
# strum = "0.24"
# strum_macros = "0.24"
# rand = "0.8.5"

# ----------- Debug -----------
bevy-inspector-egui = "0.21"
